[BUG][IE7] Stopped scrollbars appearing on modal examples

--- a/stylesheets/_examples.scss
+++ b/stylesheets/_examples.scss
@@ -3,6 +3,7 @@
   margin-left: 0;
   z-index: 0;
   display: block;
+  overflow: hidden;
 }
 
 .example-popovers {
